Colaboratory を使用して作成しました

--- a/numpyexercises.ipynb
+++ b/numpyexercises.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "numpyexercises.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyOV3Ey4CXQtAkty5eJ10YTC",
+      "authorship_tag": "ABX9TyO5F9WDZbTZ0HofQgMLfqSS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,85 +43,22 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6cyIYot7MHJY"
-      },
-      "source": [
-        "File automatically generated. See the documentation to update questions/answers/hints programmatically."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "42lW23zJMHJZ"
-      },
-      "source": [
-        "Run the `initialize.py` module, then for each question you can query the\n",
-        "answer or an hint with `hint(n)` or `answer(n)` for `n` question number."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "2mz80dUKMHJa",
-        "outputId": "db82b662-9c76-4fca-c25f-dc19e33d87f8",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
-      },
-      "source": [
-        "%run initialise.py"
-      ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "ERROR:root:File `'initialise.py'` not found.\n"
-          ],
-          "name": "stderr"
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "CkFOfQhYMHJf"
       },
       "source": [
-        "#### 1. Import the numpy package under the name `np` (★☆☆)"
+        "#### 1. numpyをインポートする。\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Adb404QvMHJg",
-        "outputId": "8547bdbe-ef16-4b51-e1ef-260058ee1a36",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 324
-        }
+        "id": "Adb404QvMHJg"
       },
       "source": [
-        "import initialize\n",
-        "\n"
+        "import numpy as np\n"
       ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ModuleNotFoundError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-5-69abaeeee462>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0minitialize\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'initialize'",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ]
-        }
-      ]
+      "execution_count": 2,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -130,7 +66,7 @@
         "id": "MCkMSR-1MHJk"
       },
       "source": [
-        "#### 2. Print the numpy version and the configuration (★☆☆)"
+        "#### 2. numpy のバージョンと configuration を print する。\n"
       ]
     },
     {
@@ -139,7 +75,28 @@
         "id": "b9sXBzzVMHJl"
       },
       "source": [
-        ""
+        "print (np.__version__)\n",
+        "np.show_config()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hdj3UUk-WDWM"
+      },
+      "source": [
+        "numpy がどんな関数やメソッドを持っているかは dir(np) とすればわかる。version も、show_config もある。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5-mqoRswWL_K"
+      },
+      "source": [
+        "dir(np)\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -150,19 +107,33 @@
         "id": "tahZbK3bMHJo"
       },
       "source": [
-        "#### 3. Create a null vector of size 10 (★☆☆)"
+        "#### 3. サイズ $10$ の null ベクトルを作る。"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AsG60LYQMHJp"
+        "id": "AsG60LYQMHJp",
+        "outputId": "60680641-dee1-4323-bd0d-e63934b160e2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
-        ""
+        "Z = np.zeros(10)\n",
+        "print(Z)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -170,19 +141,69 @@
         "id": "PnVJF210MHJs"
       },
       "source": [
-        "#### 4. How to find the memory size of any array (★☆☆)"
+        "#### 4. 配列 array のメモリーサイズを調べる方法。\n",
+        "How to find the memory size of any array (★☆☆)"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Wh6DdDVeMHJt"
+        "id": "Wh6DdDVeMHJt",
+        "outputId": "c7887022-b596-4ee8-8ab0-9f40ea5e3b28",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
-        ""
+        "Z = np.zeros((10,10))\n",
+        "print(\"%d bytes\" % (Z.size * Z.itemsize))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "800 bytes\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UATIGHvBXveV",
+        "outputId": "d21c089d-6df8-4b79-8ef1-9da0eee7e7b1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        }
+      },
+      "source": [
+        "print (Z.size)\n",
+        "print(Z.itemsize)"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "100\n",
+            "8\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_1IpC_oOX3et"
+      },
+      "source": [
+        "# いまここ"
+      ]
     },
     {
       "cell_type": "markdown",
