Colaboratory を使用して作成しました

--- a/numpyexercises.ipynb
+++ b/numpyexercises.ipynb
@@ -6,7 +6,7 @@
       "name": "numpyexercises.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMA/m0TjokNmVhKWpq8dQ1A",
+      "authorship_tag": "ABX9TyNg7x31jyAkjjqAyTDnOT1L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -430,26 +430,63 @@
       "cell_type": "code",
       "metadata": {
         "id": "n4mD-NqlMHKD",
-        "outputId": "0437b248-bd46-4a5b-e1fe-f408075f92b3",
+        "outputId": "a54fd7a2-946f-4028-d1b6-93fb1fcb87f2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 69
+          "height": 67
         }
       },
       "source": [
+        "import numpy as np\n",
         "Z = np.arange(9).reshape(3, 3)\n",
-        "print(Z)"
+        "Z"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "[[0 1 2]\n",
-            " [3 4 5]\n",
-            " [6 7 8]]\n"
-          ],
-          "name": "stdout"
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0, 1, 2],\n",
+              "       [3, 4, 5],\n",
+              "       [6, 7, 8]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4JnXLy8XXXGp",
+        "outputId": "968ba8ac-c86d-4386-ff1c-490188c96d30",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 67
+        }
+      },
+      "source": [
+        "np.array([0,1,2,3,4,5,6,7,8]).reshape(3,3)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0, 1, 2],\n",
+              "       [3, 4, 5],\n",
+              "       [6, 7, 8]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
         }
       ]
     },
@@ -513,7 +550,7 @@
         "nz = np.nonzero([1,2,0,0,4,0])\n",
         "print(nz)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -541,7 +578,7 @@
         "print([x for (x,y) in list(enumerate([1,2,0,0,4,0])) if y>0])\n",
         "print([x for (x,y) in list(enumerate([1,2,0,0,-4,0])) if y!=0])\n"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -577,7 +614,7 @@
         "Z = np.eye(3)\n",
         "print(Z)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -604,7 +641,7 @@
         "# 実験\n",
         "print(np.identity(3))"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -640,7 +677,7 @@
         "Z = np.random.random((3,3,3))\n",
         "print(Z)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -675,7 +712,7 @@
         "# 実験\n",
         "help(np.random.random)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -694,6 +731,47 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7IxT7X7pYg3M",
+        "outputId": "41a4219d-b636-43d1-9783-0e19348a306f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 84
+        }
+      },
+      "source": [
+        "# 実験\n",
+        "\n",
+        "print([int(x*10) for x in np.random.random(9)])\n",
+        "np.array([int(x*10) for x in np.random.random(9)]).reshape(3,3)"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[3, 1, 4, 0, 5, 5, 4, 3, 6]\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0, 5, 7],\n",
+              "       [9, 8, 5],\n",
+              "       [2, 1, 7]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "dAPJ4H8Mm9jG"
@@ -708,19 +786,8 @@
         "id": "nf5y5vDjMHKT"
       },
       "source": [
-        "#### 13. Create a 10x10 array with random values and find the minimum and maximum values (★☆☆)"
+        "#### 13. 10x10 のランダムな値の配列を作って、その最大値と最小値を調べる。"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "x3WL7IDFMHKT"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -737,7 +804,7 @@
         "Zmin, Zmax = Z.min(), Z.max()\n",
         "print(Zmin, Zmax)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -754,19 +821,74 @@
         "id": "64rFnwdAMHKW"
       },
       "source": [
-        "#### 14. Create a random vector of size 30 and find the mean value (★☆☆)"
+        "#### 14. ランダムな値のサイズ 30 のベクトルを作って平均を調べる。\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MCi0rWk-MHKX"
+        "id": "MCi0rWk-MHKX",
+        "outputId": "8881cae1-c24e-403e-a8f8-4a86230fd41e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
-        ""
+        "Z = np.random.random(30)\n",
+        "m = Z.mean()\n",
+        "print(m)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.500987713489689\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tSDCeYJ9ZsTe",
+        "outputId": "72ec82cf-eabd-4313-8287-c8fec119fe34",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "# 実験\n",
+        "\n",
+        "sum(list(Z)) / 30"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.500987713489689"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5MR9LFfOZ6Wh"
+      },
+      "source": [
+        "# いまここ"
+      ]
     },
     {
       "cell_type": "markdown",
