Colaboratory を使用して作成しました

--- a/numpyexercises.ipynb
+++ b/numpyexercises.ipynb
@@ -6,7 +6,7 @@
       "name": "numpyexercises.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN+/dtNgPNnf+vMMsjhB1Hg",
+      "authorship_tag": "ABX9TyOWlS4PxSABKMVUlFe8CH6g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2216,22 +2216,76 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "I1JkaSbPFwmH"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "jwOJ7D2NMHLR"
       },
       "source": [
-        "#### 30. How to find common values between two arrays? (★☆☆)"
+        "#### 30. 2つの入れるの共通の値をみつける。\n",
+        "How to find common values between two arrays? (★☆☆)"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "l3OA2W8nMHLS"
+        "id": "l3OA2W8nMHLS",
+        "outputId": "66d56623-9901-4222-ce26-ea13c4742a2c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
-        ""
+        "Z1 = np.random.randint(0,10,10)\n",
+        "Z2 = np.random.randint(0,10,10)\n",
+        "print(np.intersect1d(Z1,Z2))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1 4 5 7 9]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sC02Gx7eH51X",
+        "outputId": "810918ea-0e3a-465f-d784-4ff0e669e501",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 193
+        }
+      },
+      "source": [
+        "# 実験\n",
+        "np.set([1,2,3,1])"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-12-de4b2d25b5ee>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# 実験\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: module 'numpy' has no attribute 'set'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
