--- a/numpyexercises.ipynb
+++ b/numpyexercises.ipynb
@@ -2958,7 +2958,7 @@
         "equal = np.array_equal(A,B)\n",
         "print(equal)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2990,7 +2990,7 @@
         "equal = np.array_equal(C, D)\n",
         "print(equal)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3027,7 +3027,7 @@
         "# Z[0] = 1 #=> ValueError: assignment destination is read-only\n",
         "print(Z)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3066,7 +3066,7 @@
         "print(R)\n",
         "print(T)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3108,7 +3108,7 @@
         "\n",
         "print(np.array(list (map (np.array, list(zip(R, T))))))"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3137,21 +3137,74 @@
         "id": "3hlyNEGrMHMI"
       },
       "source": [
-        "#### (45) Create random vector of size 10 and replace the maximum value by 0 (★★☆)"
+        "#### (45) ランダムなサイズ 10 のベクトルを作り、最大値を 0 に置き換える。"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZgrPl093MHMI"
+        "id": "ZgrPl093MHMI",
+        "outputId": "8d34ac74-c4e2-41c1-9906-f742c74a83ff",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        }
       },
       "source": [
+        "import numpy as np\n",
         "Z = np.random.random(10)\n",
         "Z[Z.argmax()] = 0\n",
         "print(Z)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[0.71505259 0.59912095 0.72317423 0.46835586 0.71231707 0.\n",
+            " 0.69987136 0.06009291 0.07449681 0.10041037]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pO8oiMW2lOMd",
+        "outputId": "d7a96325-c899-4084-bf4d-7f615bad29ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 118
+        }
+      },
+      "source": [
+        "# 実験\n",
+        "z = np.array([3, 2, 1, 1, 3])\n",
+        "print(z)\n",
+        "print(z.argmax())\n",
+        "print(z.argmin())\n",
+        "y=[3, 2, 1, 1, 3]\n",
+        "print(y)\n",
+        "print(y.index(max(y)))\n",
+        "y[y.index(max(y))] = 0\n",
+        "print(y)"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[3 2 1 1 3]\n",
+            "0\n",
+            "2\n",
+            "[3, 2, 1, 1, 3]\n",
+            "0\n",
+            "[0, 2, 1, 1, 3]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3159,13 +3212,18 @@
         "id": "y1sAJclgMHML"
       },
       "source": [
-        "#### (46) Create a structured array with `x` and `y` coordinates covering the [0,1]x[0,1] area (★★☆)"
+        "#### (46) x 座標と y 座標を持つ構造化配列 structured array を作り、[0,1]x[0,1] の範囲をカバーする。"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sFniNG85MHML"
+        "id": "sFniNG85MHML",
+        "outputId": "c71849ff-f072-45bb-ab82-b352946a5016",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 101
+        }
       },
       "source": [
         "Z = np.zeros((5,5), [('x',float),('y',float)])\n",
@@ -3173,8 +3231,54 @@
         "                             np.linspace(0,1,5))\n",
         "print(Z)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[(0.  , 0.  ) (0.25, 0.  ) (0.5 , 0.  ) (0.75, 0.  ) (1.  , 0.  )]\n",
+            " [(0.  , 0.25) (0.25, 0.25) (0.5 , 0.25) (0.75, 0.25) (1.  , 0.25)]\n",
+            " [(0.  , 0.5 ) (0.25, 0.5 ) (0.5 , 0.5 ) (0.75, 0.5 ) (1.  , 0.5 )]\n",
+            " [(0.  , 0.75) (0.25, 0.75) (0.5 , 0.75) (0.75, 0.75) (1.  , 0.75)]\n",
+            " [(0.  , 1.  ) (0.25, 1.  ) (0.5 , 1.  ) (0.75, 1.  ) (1.  , 1.  )]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Kj71IA5fnUiB",
+        "outputId": "5e6670f8-60eb-461e-d640-682294c82bb6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 101
+        }
+      },
+      "source": [
+        "# 実験\n",
+        "\n",
+        "dtype = [('x',float),('y',float)]\n",
+        "Y = np.zeros((5,5), dtype=dtype)\n",
+        "Y['x'] =np.linspace(0,1,5)\n",
+        "Y['y'] =np.linspace(0,1,5)\n",
+        "print(Y)"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[(0.  , 0.  ) (0.25, 0.25) (0.5 , 0.5 ) (0.75, 0.75) (1.  , 1.  )]\n",
+            " [(0.  , 0.  ) (0.25, 0.25) (0.5 , 0.5 ) (0.75, 0.75) (1.  , 1.  )]\n",
+            " [(0.  , 0.  ) (0.25, 0.25) (0.5 , 0.5 ) (0.75, 0.75) (1.  , 1.  )]\n",
+            " [(0.  , 0.  ) (0.25, 0.25) (0.5 , 0.5 ) (0.75, 0.75) (1.  , 1.  )]\n",
+            " [(0.  , 0.  ) (0.25, 0.25) (0.5 , 0.5 ) (0.75, 0.75) (1.  , 1.  )]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3182,24 +3286,78 @@
         "id": "G4aB2RBtMHMN"
       },
       "source": [
-        "#### (47) Given two arrays, X and Y, construct the Cauchy matrix C (Cij =1/(xi - yj))"
+        "#### (47) 行列 X と Y からコーシー行列 C を作る。Cauchy matrix C は (Cij =1/(xi - yj))。\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3tN45pH4MHMO"
+        "id": "3tN45pH4MHMO",
+        "outputId": "41bb1ad6-26e2-4a2c-c93d-037246f20c89",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
         "# Author: Evgeni Burovski\n",
+        "\n",
+        "import numpy as np\n",
         "\n",
         "X = np.arange(8)\n",
         "Y = X + 0.5\n",
         "C = 1.0 / np.subtract.outer(X, Y)\n",
         "print(np.linalg.det(C))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3638.163637117973\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3oYkky1tUKZI",
+        "outputId": "1572625d-a260-4f47-a8c7-8b70f66109fc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 134
+        }
+      },
+      "source": [
+        "# 実験\n",
+        "\n",
+        "X = np.arange(3)\n",
+        "Y = X + 0.5\n",
+        "print(X)\n",
+        "print(Y)\n",
+        "C = 1.0 / np.subtract.outer(X, Y)\n",
+        "print(C.size)\n",
+        "print(C)\n",
+        "print(np.linalg.det(C))"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[0 1 2]\n",
+            "[0.5 1.5 2.5]\n",
+            "9\n",
+            "[[-2.         -0.66666667 -0.4       ]\n",
+            " [ 2.         -2.         -0.66666667]\n",
+            " [ 0.66666667  2.         -2.        ]]\n",
+            "-15.17037037037037\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
