Colaboratory を使用して作成しました

--- a/numpyexercises.ipynb
+++ b/numpyexercises.ipynb
@@ -3232,7 +3232,7 @@
         "                             np.linspace(0,1,5))\n",
         "print(Z)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3260,7 +3260,7 @@
       "source": [
         "np.linspace(0,1,5)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3295,7 +3295,7 @@
         "np.transpose(Y)['y'] = np.linspace(0,1,5)\n",
         "print(Y)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3417,7 +3417,7 @@
         "   print(np.finfo(dtype).max)\n",
         "   print(np.finfo(dtype).eps) # machine epsilon?"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3455,7 +3455,7 @@
         "print(np.iinfo(np.int8))\n",
         "print(np.finfo(np.float32))\n"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3506,7 +3506,7 @@
         "Z = np.zeros((16,16))\n",
         "print(Z)"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3550,7 +3550,7 @@
         "Z = np.zeros((16,16))\n",
         "print(Z)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3593,7 +3593,7 @@
         "index = (np.abs(Z-v)).argmin()\n",
         "print(Z[index])"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3621,7 +3621,7 @@
         "print(v)\n",
         "print(index)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3661,7 +3661,7 @@
         "                                  ('b', float)])])\n",
         "print(Z)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3710,7 +3710,7 @@
         "D = scipy.spatial.distance.cdist(Z,Z)\n",
         "print(D)"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3780,7 +3780,7 @@
         "D = np.sqrt( (X-X.T)**2 + (Y-Y.T)**2)\n",
         "print(D)"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3837,7 +3837,7 @@
         "Y[:] = Z\n",
         "print(Y)\n"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3869,7 +3869,7 @@
         "Y[:] = Z\n",
         "print(Y)\n"
       ],
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3918,7 +3918,7 @@
         "Z = np.genfromtxt(s, delimiter=\",\", dtype=np.int)\n",
         "print(Z)"
       ],
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3934,6 +3934,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "oPoe8t5WBl0t"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "EhK0EaknjRlf"
       },
       "source": [
@@ -3944,15 +3953,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "vc5Uiij_edpe",
-        "outputId": "4155f2ee-183a-407a-e5c9-164df6b327e5",
+        "outputId": "daf5acc0-d66e-4f40-fe72-5dd9154326b2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 55
+          "height": 34
         }
       },
       "source": [
         "# 実験\n",
-        "\n",
+        "import numpy as np\n",
         "\n",
         "def read_data(s):\n",
         "    row = []\n",
@@ -3960,6 +3969,7 @@
         "    for line in s.split('\\n'):\n",
         "        for data in line.split(','):\n",
         "            row.append(data)\n",
+        "        row = []\n",
         "        all.append(row)\n",
         "    \n",
         "    return all\n",
@@ -3970,12 +3980,12 @@
         "\n",
         "print(read_data(s))"
       ],
-      "execution_count": 78,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[['1', ' 2', ' 3', ' 4', ' 5', '6', '  ', '  ', ' 7', ' 8', ' ', '  ', ' 9', '10', '11'], ['1', ' 2', ' 3', ' 4', ' 5', '6', '  ', '  ', ' 7', ' 8', ' ', '  ', ' 9', '10', '11'], ['1', ' 2', ' 3', ' 4', ' 5', '6', '  ', '  ', ' 7', ' 8', ' ', '  ', ' 9', '10', '11']]\n"
+            "[['6', '  ', '  ', ' 7', ' 8'], [' ', '  ', ' 9', '10', '11'], []]\n"
           ],
           "name": "stdout"
         }
