Colaboratory を使用して作成しました

--- a/numpyexercises.ipynb
+++ b/numpyexercises.ipynb
@@ -57,7 +57,7 @@
       "source": [
         "import numpy as np\n"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -4345,7 +4345,7 @@
         "\n",
         "print(Y)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4384,7 +4384,7 @@
         "\n",
         "print([[X[n] - np.array([np.mean(row) for row in X])[n]] for n in range(5)])"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4430,7 +4430,7 @@
         "print(Z)\n",
         "print(Z[Z[:,1].argsort()])"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4463,7 +4463,7 @@
         "print(a)\n",
         "print(Z[a])"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4483,15 +4483,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "EhK0EaknjRlf"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "qBW8asyXMHMx"
       },
       "source": [
@@ -4502,7 +4493,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "7THUkIfpMHMx",
-        "outputId": "e3df14f2-ad98-4045-9154-71cc1e914f8f",
+        "outputId": "d1216966-a7b9-4b3b-ff84-5cc8ad4398b5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -4514,7 +4505,7 @@
         "Z = np.random.randint(0,3,(3,10))\n",
         "print((~Z.any(axis=0)).any())"
       ],
-      "execution_count": 48,
+      "execution_count": 91,
       "outputs": [
         {
           "output_type": "stream",
@@ -4526,31 +4517,47 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EhK0EaknjRlf"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "UFhmf-3JBiJe",
-        "outputId": "043e5fdc-5e9f-4e22-ed0a-c33d56000fe8",
+        "outputId": "da2d8c9f-7903-4eaa-8fab-a054022b39c0",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 84
+          "height": 118
         }
       },
       "source": [
         "# 実験\n",
         "\n",
-        "Z = np.random.randint(0,3,(3,10))\n",
-        "print((~Z.any(axis=0)).any())\n",
-        "print(Z)"
+        "Z=np.array([0,0,1,0]).reshape(2,2)\n",
+        "print(Z)\n",
+        "print(Z.any(axis=0))\n",
+        "print(~Z.any(axis=0))\n",
+        "print(~np.array([True, False]))\n",
+        "list(map (lambda x: not(x),  Z.any(axis=0)))\n",
+        "\n",
+        "print(np.array(list(map (lambda x: not(x),  Z.any(axis=0)))).any())"
       ],
-      "execution_count": 61,
+      "execution_count": 134,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "False\n",
-            "[[2 2 0 1 1 1 2 0 2 1]\n",
-            " [1 1 1 2 0 0 0 0 2 2]\n",
-            " [2 1 0 1 1 0 0 2 0 1]]\n"
+            "[[0 0]\n",
+            " [1 0]]\n",
+            "[ True False]\n",
+            "[False  True]\n",
+            "[False  True]\n",
+            "True\n"
           ],
           "name": "stdout"
         }
