Colaboratory を使用して作成しました

--- a/pythonclass01.ipynb
+++ b/pythonclass01.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "pythonclass01.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMdvUqWuo8lf4nqKojsNXJb",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOltTliQe2YS7p8AWEld0t2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,17 +24,6 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/kalz2q/mycolabnotebooks/blob/master/pythonclass01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "-ewCJYtCo2vv"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -85,7 +75,7 @@
         "scope_test()\n",
         "print(\"In global scope:\", spam)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -121,25 +111,148 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fy1gd5mKrGHp"
+        "id": "Zd-FsuisoYFK"
       },
       "source": [
         "class ClassName:\n",
-        "    # <statement-1>\n",
-        "    # <statement-N>\n",
+        "    '''\n",
+        "    <statement-1>\n",
+        "    ...\n",
+        "    <statement-N>'''\n",
         "    pass"
       ],
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Dr-7zih_sVvw"
+        "id": "FFzbwM95rx1J"
       },
       "source": [
-        "クラスオブジェクトは属性参照とインスタンス生成をサポートする。\n",
-        "\n"
+        "次のようにクラスを作ると、属性参照でクラス内の変数や関数を扱うことになる。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nftIQJwWsCeC",
+        "outputId": "45d5d6bd-10f1-42ef-b403-8a584c068627",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 84
+        }
+      },
+      "source": [
+        "class MyClass:\n",
+        "    \"\"\"A simple example class\"\"\"\n",
+        "    i = 12345\n",
+        "\n",
+        "    def f(self):\n",
+        "        return 'hello world'\n",
+        "\n",
+        "print(MyClass.i)\n",
+        "x = MyClass()\n",
+        "print(x)\n",
+        "print(x.f())\n",
+        "print(x.i)\n"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "12345\n",
+            "<__main__.MyClass object at 0x7f0402abbf28>\n",
+            "hello world\n",
+            "12345\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4PooaZqbtfbj"
+      },
+      "source": [
+        "インスタンスの作成は x = MyClass() のように行うが、定義に次のようにしておくと、生成時の状態を作ることができる。\n",
+        "\n",
+        "```python\n",
+        "def __int__(self):\n",
+        "  self.darta=[]\n",
+        "```\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jBgVKMZzvFG_"
+      },
+      "source": [
+        "引数の受渡しができる。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XeSEKyR2uaRb",
+        "outputId": "9856e731-cc0a-4445-e441-6cf74fc02fb2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "class Complex:\n",
+        "    def __init__(self, realpart, imagpart):\n",
+        "        self.r = realpart\n",
+        "        self.i = imagpart\n",
+        "\n",
+        "x = Complex(3.0, -4.5)\n",
+        "\n",
+        "print(x.r, x.i)\n"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3.0 -4.5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UCg0PAoCurf3",
+        "outputId": "e982704f-d786-41b5-e176-82127d70cbea",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 67
+        }
+      },
+      "source": [
+        "# 実験\n",
+        "\n",
+        "print(3+5j)\n",
+        "print(complex(5,8))\n",
+        "print(Complex(7,9))"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(3+5j)\n",
+            "(5+8j)\n",
+            "<__main__.Complex object at 0x7f0402abb860>\n"
+          ],
+          "name": "stdout"
+        }
       ]
     }
   ]
