--- a/pythonclass01.ipynb
+++ b/pythonclass01.ipynb
@@ -6,7 +6,7 @@
       "name": "pythonclass01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNVEZGjnw07rnoTwInaaRit",
+      "authorship_tag": "ABX9TyMWDTRlCBbq2pJx2lQMebjD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,8 +37,7 @@
         "\n",
         "https://docs.python.org/3/tutorial/classes.html\n",
         "\n",
-        "説明が何を言っているのかわからないので、とりあえずサンプルを順次実行して読んでいく。\n",
-        "\n"
+        "説明が何を言っているのかわからないので、とりあえずサンプルを順次実行して実験しながら読んでいく。\n"
       ]
     },
     {
@@ -166,7 +165,7 @@
         "print(x.f())\n",
         "print(x.i)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -342,7 +341,7 @@
         "print(xf)\n",
         "print(x.f())"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -393,7 +392,7 @@
         "print(d.name)                  # unique to d\n",
         "print(e.name)                  # unique to e"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -402,6 +401,107 @@
             "canine\n",
             "Fido\n",
             "Buddy\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HdUBdUE88BS5"
+      },
+      "source": [
+        "次のようなことはやっちゃいけない、とか。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "f3YLwG7D8EXl",
+        "outputId": "1e70b860-49d5-4325-ffc7-b956c1191fc4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "source": [
+        "class Dog:\n",
+        "\n",
+        "    tricks = []             # mistaken use of a class variable\n",
+        "\n",
+        "    def __init__(self, name):\n",
+        "        self.name = name\n",
+        "\n",
+        "    def add_trick(self, trick):\n",
+        "        self.tricks.append(trick)\n",
+        "\n",
+        "d = Dog('Fido')\n",
+        "e = Dog('Buddy')\n",
+        "d.add_trick('roll over')\n",
+        "e.add_trick('play dead')\n",
+        "d.tricks                # unexpectedly shared by all dogs\n"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['roll over', 'play dead']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_tRhp-TL8vnj"
+      },
+      "source": [
+        "正しくは次のようにやる。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AeiYHMVI8zKg",
+        "outputId": "0f3579f3-ae12-4f60-de7d-f7b6d0d2fce4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        }
+      },
+      "source": [
+        "class Dog:\n",
+        "\n",
+        "    def __init__(self, name):\n",
+        "        self.name = name\n",
+        "        self.tricks = []    # creates a new empty list for each dog\n",
+        "\n",
+        "    def add_trick(self, trick):\n",
+        "        self.tricks.append(trick)\n",
+        "\n",
+        "d = Dog('Fido')\n",
+        "e = Dog('Buddy')\n",
+        "d.add_trick('roll over')\n",
+        "e.add_trick('play dead')\n",
+        "print(d.tricks)\n",
+        "['roll over']\n",
+        "print(e.tricks)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['roll over']\n",
+            "['play dead']\n"
           ],
           "name": "stdout"
         }
