Colaboratory を使用して作成しました

--- a/pythonclass01.ipynb
+++ b/pythonclass01.ipynb
@@ -6,7 +6,7 @@
       "name": "pythonclass01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOfrwNSaMW5lzDYeVxHBsMi",
+      "authorship_tag": "ABX9TyNOq74rD56IoLZ6gytsbPCa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -545,13 +545,71 @@
         "w2.region = 'east'\n",
         "print(w2.purpose, w2.region)\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "storage west\n",
             "storage east\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZeUaFlaZPjhz"
+      },
+      "source": [
+        "# self と適用範囲\n",
+        "\n",
+        "次のようなことはできるがわかりにくくなる。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zb3T_tA2sVAD",
+        "outputId": "28eac8c8-6567-4eb0-fb2f-6299cdbdbde1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 101
+        }
+      },
+      "source": [
+        "# Function defined outside the class\n",
+        "def f1(self, x, y):\n",
+        "    return min(x, x+y)\n",
+        "\n",
+        "class C:\n",
+        "    f = f1\n",
+        "\n",
+        "    def g(self):\n",
+        "        return 'hello world'\n",
+        "\n",
+        "    h = g\n",
+        "\n",
+        "# 実験\n",
+        "\n",
+        "x = C()\n",
+        "print(f1((),3,2))\n",
+        "print(x.f(3, 4))\n",
+        "print(x.f(-3,4))\n",
+        "print(x.g())\n",
+        "print(x.h())\n"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3\n",
+            "3\n",
+            "-3\n",
+            "hello world\n",
+            "hello world\n"
           ],
           "name": "stdout"
         }
@@ -567,58 +625,14 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Cj8Sq61vsOLP"
-      },
-      "source": [
-        "Data attributes may be referenced by methods as well as by ordinary users (“clients”) of an object. In other words, classes are not usable to implement pure abstract data types. In fact, nothing in Python makes it possible to enforce data hiding — it is all based upon convention. (On the other hand, the Python implementation, written in C, can completely hide implementation details and control access to an object if necessary; this can be used by extensions to Python written in C.)\n",
-        "\n",
-        "Clients should use data attributes with care — clients may mess up invariants maintained by the methods by stamping on their data attributes. Note that clients may add data attributes of their own to an instance object without affecting the validity of the methods, as long as name conflicts are avoided — again, a naming convention can save a lot of headaches here.\n",
-        "\n",
-        "There is no shorthand for referencing data attributes (or other methods!) from within methods. I find that this actually increases the readability of methods: there is no chance of confusing local variables and instance variables when glancing through a method.\n",
-        "\n",
-        "Often, the first argument of a method is called self. This is nothing more than a convention: the name self has absolutely no special meaning to Python. Note, however, that by not following the convention your code may be less readable to other Python programmers, and it is also conceivable that a class browser program might be written that relies upon such a convention.\n",
-        "\n",
-        "Any function object that is a class attribute defines a method for instances of that class. It is not necessary that the function definition is textually enclosed in the class definition: assigning a function object to a local variable in the class is also ok. For example:"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
-        "id": "zb3T_tA2sVAD"
-      },
-      "source": [
-        "# Function defined outside the class\n",
-        "def f1(self, x, y):\n",
-        "    return min(x, x+y)\n",
-        "\n",
-        "class C:\n",
-        "    f = f1\n",
-        "\n",
-        "    def g(self):\n",
-        "        return 'hello world'\n",
-        "\n",
-        "    h = g"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "8Bybqc7JsY6D"
-      },
-      "source": [
-        "Now f, g and h are all attributes of class C that refer to function objects, and consequently they are all methods of instances of C — h being exactly equivalent to g. Note that this practice usually only serves to confuse the reader of a program.\n",
-        "\n",
-        "Methods may call other methods by using method attributes of the self argument:"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "hDAjhK5dsbyi"
+        "id": "hDAjhK5dsbyi",
+        "outputId": "0b094d8d-866a-45d0-c223-5e0b62e5b940",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
         "class Bag:\n",
@@ -630,10 +644,61 @@
         "\n",
         "    def addtwice(self, x):\n",
         "        self.add(x)\n",
-        "        self.add(x)"
+        "        self.add(x)\n",
+        "\n",
+        "x = Bag()\n",
+        "x.add(3)\n",
+        "x.addtwice(5)\n",
+        "print(x.data)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[3, 5, 5]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9Q1kOPN2RKJP",
+        "outputId": "a57f4d02-edde-4d60-caa6-e4104ab8edfd",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "class Bag:\n",
+        "    def __init__(self):\n",
+        "        self.data = []\n",
+        "\n",
+        "    def add(x):\n",
+        "        data.append(x)\n",
+        "\n",
+        "    def addtwice(self, x):\n",
+        "        self.add(x)\n",
+        "        self.add(x)\n",
+        "\n",
+        "x = Bag()\n",
+        "# x.add(3) #=> TypeError: add() takes 1 positional argument but 2 were given\n",
+        "# x.addtwice(5) #=> TypeError: add() takes 1 positional argument but 2 were given\n",
+        "print(x.data)"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
