--- a/pythonclass01.ipynb
+++ b/pythonclass01.ipynb
@@ -6,7 +6,7 @@
       "name": "pythonclass01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNOq74rD56IoLZ6gytsbPCa",
+      "authorship_tag": "ABX9TyOxevjjoVz6syS60Ve8BNML",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -600,7 +600,7 @@
         "print(x.g())\n",
         "print(x.h())\n"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -651,7 +651,7 @@
         "x.addtwice(5)\n",
         "print(x.data)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -689,7 +689,7 @@
         "# x.addtwice(5) #=> TypeError: add() takes 1 positional argument but 2 were given\n",
         "print(x.data)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -698,17 +698,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Qd2RqDWksfsj"
-      },
-      "source": [
-        "Methods may reference global names in the same way as ordinary functions. The global scope associated with a method is the module containing its definition. (A class is never used as a global scope.) While one rarely encounters a good reason for using global data in a method, there are many legitimate uses of the global scope: for one thing, functions and modules imported into the global scope can be used by methods, as well as functions and classes defined in it. Usually, the class containing the method is itself defined in this global scope, and in the next section we’ll find some good reasons why a method would want to reference its own class.\n",
-        "\n",
-        "Each value is an object, and therefore has a class (also called its type). It is stored as object.__class__."
       ]
     },
     {
@@ -726,24 +715,46 @@
         "id": "LI8l3hhJsm8B"
       },
       "source": [
-        "Of course, a language feature would not be worthy of the name “class” without supporting inheritance. The syntax for a derived class definition looks like this:"
+        "継承はつぎのように行う。"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Z8GTV811spYv"
+        "id": "Z8GTV811spYv",
+        "outputId": "ecd1a51f-399c-4823-c54f-b0f9012b588a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
+        "'''\n",
         "class DerivedClassName(BaseClassName):\n",
         "    <statement-1>\n",
         "    .\n",
         "    .\n",
         "    .\n",
-        "    <statement-N>"
+        "    <statement-N>'''"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'\\nclass DerivedClassName(BaseClassName):\\n    <statement-1>\\n    .\\n    .\\n    .\\n    <statement-N>'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 22
+        }
+      ]
     },
     {
       "cell_type": "markdown",
